# Casaparo

./: .gitignore  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  prebuild.js  tailwind.config.ts  tsconfig.json
api-server-wasm/: .gitignore  Cargo.toml  package-lock.json  package.json  worker.entry.js  wrangler.dev.toml  wrangler.prod.toml  wrangler.toml
api-server-wasm/custom_build/: worker.entry.js
api-server-wasm/schema/: schema_anniversaries.sql  schema_completed_households.sql  schema_households.sql  schema_images.sql  schema_inventories.sql  schema_inventory_types.sql  schema_labels.sql  schema_schedules.sql  schema_shifts.sql  schema_shopping_notes.sql  schema_task_comments.sql  schema_tasks.sql  schema_web_push_subscription.sql  schema_web_push_subscriptions.sql  schema_wiki_images.sql  schema_wikis.sql
api-server-wasm/scripts/: build-wasm.sh
api-server-wasm/src/: entities.rs  lib.rs  main.rs  models.rs  service.rs
api-server-wasm/src/application/: usecases.rs
api-server-wasm/src/application/usecases/: anniversary_usecases.rs  household_usecases.rs  inventory_type_usecases.rs  inventory_usecases.rs  label_usecases.rs  shift_usecases.rs  (+7 more)
api-server-wasm/src/archives/: v1_entities.rs  v1_lib.rs
api-server-wasm/src/database/: database_connection.rs  database_scheme.rs
api-server-wasm/src/domain/: entities.rs  repositories.rs
api-server-wasm/src/infrastructure/: repositories.rs
api-server-wasm/src/interfaces/: api.rs
api-server-wasm/src/service/: macros.rs  validators.rs
api-server-wasm/src/services/: macros.rs
(+166 files in other folders)
