[package]
name = "api-server-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
worker = {version = "0.0.18", features = ["d1"]}
serde = {version = "1.0", features = ["derive"]}
reqwest = {version = "0.11", features = ["json"]}
tokio = {version = "1", features = ["full"]}